fix: resolve SonarCloud critical + reliability issues on chat MCP code
Fix the issues flagged by SonarCloud on the AI-chat MCP PR:

- java:S1192 (CRITICAL) MatrixHttpClient — extract the 11x duplicated
  "/_matrix/client/v3/rooms/" literal into a ROOMS_API_PATH constant.
- java:S2142 (BUG, Reliability) MatrixService.callAsUser — re-interrupt the
  thread instead of swallowing InterruptedException in the catch-all.
- java:S1141 MatrixService.callAsUser — extract the nested token-refresh try
  block into callWithTokenRefresh().
- java:S6885 MatrixService.getRoomMessages — use Math.clamp instead of
  Math.min/Math.max.
- java:S112 (x3) MatrixHttpClient — throw a dedicated MatrixException instead
  of generic RuntimeException in the new chat read/sync/send methods.
- javascript:S8961 AskAIChatMessageAction.vue — declare the 'close' event in
  the emits option.
- javascript:S2486 AudioMessageTranscription.vue — log the caught error.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>